日常 bugfix 更新，依赖升级

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-cmn-Hans">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -18,6 +18,7 @@
       display: flex;
       width: 100%;
       height: 100%;
+      min-width: 100%;
       justify-content: center;
       align-items: center;
       flex-direction: column;
@@ -36,8 +37,8 @@
       -webkit-animation-fill-mode: both;
       animation-fill-mode: both;
       position: absolute;
-      top: 0px;
-      left: 0px;
+      top: 0;
+      left: 0;
       border-radius: 100%;
     }
 
