feat: add google sign in button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title><%= title %></title>
 </head>
 <body>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <div id="appProvider" style="display: none"></div>
 <div id="app">
   <style>
